[gd_scene load_steps=5 format=3 uid="uid://dn36ie0to0656"]

[ext_resource type="Script" uid="uid://dc87a4o580xmh" path="res://scripts/world.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://m78hymwx43f1" path="res://scenes/Enemy.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c3wciaba1bcwu" path="res://scenes/Player.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/grid_background.gd" id="4"]
[ext_resource type="PackedScene" path="res://scenes/InventoryUI.tscn" id="5"]

[node name="World" type="Node2D"]
script = ExtResource("1")
player_scene = ExtResource("3")
enemy_scene = ExtResource("2")

[node name="Grid" type="Node2D" parent="."]
z_index = -1
script = ExtResource("4")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MarginRoot" type="Control" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -96.0
offset_right = 256.0
offset_bottom = -16.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginRoot"]
offset_right = 240.0
offset_bottom = 80.0
theme_override_constants/separation = 6

[node name="HealthLabel" type="Label" parent="HUD/MarginRoot/VBoxContainer"]
text = "HP 100/100"

[node name="BarBG" type="ColorRect" parent="HUD/MarginRoot/VBoxContainer"]
custom_minimum_size = Vector2(220, 20)
color = Color(0, 0, 0, 0.6)
mouse_filter = 2
size_flags_horizontal = 0

[node name="HealthFill" type="ColorRect" parent="HUD/MarginRoot/VBoxContainer/BarBG"]
offset_left = 2.0
offset_top = 2.0
offset_right = 218.0
offset_bottom = 18.0
color = Color(0.8, 0, 0, 1)
mouse_filter = 2
anchor_right = 0.0
size_flags_horizontal = 0

[node name="InventoryLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" parent="InventoryLayer" instance=ExtResource("5")]

[node name="XPBarHUD" type="CanvasLayer" parent="."]

[node name="BottomMargin" type="Control" parent="XPBarHUD"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
mouse_filter = 2

[node name="BarBG" type="ColorRect" parent="XPBarHUD/BottomMargin"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)
mouse_filter = 2

[node name="XPFill" type="ColorRect" parent="XPBarHUD/BottomMargin/BarBG"]
offset_left = 2.0
offset_top = 16.0
offset_right = 1278.0
offset_bottom = 36.0
color = Color(0.2, 0.8, 0.2, 1)
mouse_filter = 2
anchor_right = 0.0
size_flags_horizontal = 0

[node name="LevelLabel" type="Label" parent="XPBarHUD/BottomMargin"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 2.0
text = "Level 1: 0 / 120 XP"
mouse_filter = 2